PWA-396- fix in dashboard on safari browser

--- a/css/app.scss
+++ b/css/app.scss
@@ -4000,6 +4000,16 @@ button.preodayButton.noclick{
   }
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+    /* Safari only override */
+    ::i-block-chrome, .accordion.contentSectionsDashboard section > h3[data-section-title]{
+      img{
+        top: 0px;
+      }
+    }
+}
+
+
 @media screen and (max-width: 910px) {
 
   .accordion.contentSectionsDashboard section > h3[data-section-title]{
